[gd_scene load_steps=17 format=3]

[ext_resource type="PackedScene" path="res://scenes/Agent.tscn" id="1_0"]
[ext_resource type="PackedScene" path="res://scenes/CameraRig.tscn" id="2_0"]
[ext_resource type="Script" path="res://scripts/game_manager.gd" id="3_0"]
[ext_resource type="Script" path="res://scripts/baseline_demo.gd" id="4_0"]
[ext_resource type="PackedScene" path="res://scenes/HUD.tscn" id="7_0"]
[ext_resource type="Material" path="res://materials/floor_tiles.tres" id="8_0"]
[ext_resource type="Material" path="res://materials/wall_panels.tres" id="9_0"]
[ext_resource type="Script" path="res://scripts/time_board.gd" id="10_0"]
[ext_resource type="Script" path="res://scripts/recorder.gd" id="12_1"]

[sub_resource type="PlaneMesh" id="4_0"]
size = Vector2(30, 30)
subdivide_width = 16
subdivide_depth = 16

[sub_resource type="BoxShape3D" id="5_0"]
size = Vector3(30, 10.0, 30)

[sub_resource type="BoxMesh" id="6_0"]
size = Vector3(2, 2, 2)

[sub_resource type="BoxShape3D" id="7_0"]
size = Vector3(1, 1, 1)

[sub_resource type="BoxShape3D" id="9_0"]
size = Vector3(30, 2, 0.4)

[sub_resource type="BoxShape3D" id="9_1"]
size = Vector3(0.4, 2, 30)

[sub_resource type="ProceduralSkyMaterial" id="11_0"]
sky_top_color = Color(0.12, 0.17, 0.23, 1)
sky_horizon_color = Color(0.3, 0.35, 0.4, 1)
ground_bottom_color = Color(0.12, 0.12, 0.14, 1)
ground_horizon_color = Color(0.18, 0.2, 0.25, 1)
sun_disc_color = Color(1, 0.95, 0.85, 1)
sun_energy = 1.4

[sub_resource type="Environment" id="12_0"]
background_mode = 2
sky = SubResource("11_0")
ambient_light_source = 1
ambient_light_energy = 1.0
ambient_light_sky_contribution = 0.7
tonemap_mode = 3
tonemap_exposure = 1.1
tonemap_white = 1.1
auto_exposure_enabled = true
auto_exposure_min_luminance = 0.4
auto_exposure_max_luminance = 2.2
auto_exposure_speed = 1.5
ssao_enabled = true
ssao_radius = 0.55
ssao_intensity = 1.3
ssao_power = 1.2
ssao_detail = 0.6
ssr_enabled = true
ssr_roughness_threshold = 0.2
ssr_depth_tolerance = 0.2
sdfgi_enabled = true
sdfgi_cascades = 2
sdfgi_min_cell_size = 0.75
sdfgi_energy = 1.0
sdfgi_use_occlusion = true
glow_enabled = true
glow_strength = 0.75
glow_intensity = 0.7
glow_bloom = 0.25
glow_hdr_bleed_threshold = 1.2
volumetric_fog_enabled = true
volumetric_fog_density = 0.015
volumetric_fog_albedo = Color(0.6, 0.65, 0.72, 1)
volumetric_fog_emission = Color(0.0, 0.0, 0.0, 1)
volumetric_fog_length = 80.0
volumetric_fog_anisotropy = 0.1
volumetric_fog_light_energy = 1.1

[node name="BaselineWorld" type="Node3D"]
script = ExtResource("4_0")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
rotation = Vector3(-0.95, 0.6, 0.0)
light_color = Color(1, 0.98, 0.9, 1)
light_energy = 2.4
light_indirect_energy = 1.1
light_specular = 1.2
shadow_enabled = true
shadow_blur = 2.5
shadow_bias = 0.0035
shadow_normal_bias = 1.15
directional_shadow_mode = 2
directional_shadow_max_distance = 120.0
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.3
directional_shadow_split_3 = 0.6
directional_shadow_blend_splits = true

[node name="FillLight" type="OmniLight3D" parent="."]
translation = Vector3(-5.5, 4.0, 6.0)
light_color = Color(0.55, 0.7, 1, 1)
light_energy = 0.9
light_specular = 1.1
shadow_enabled = true
shadow_bias = 0.01
omni_range = 22.0

[node name="BackSpot" type="SpotLight3D" parent="."]
translation = Vector3(8.0, 6.5, -4.0)
rotation = Vector3(-1.2, -0.9, 0.0)
light_color = Color(1, 0.7, 0.45, 1)
light_energy = 1.6
light_indirect_energy = 0.8
spot_angle = 40.0
spot_angle_attenuation = 0.75
shadow_enabled = true
shadow_bias = 0.01
shadow_normal_bias = 1.4
shadow_blur = 1.5

[node name="ReflectionProbe" type="ReflectionProbe" parent="."]
origin_offset = Vector3(0, 3.0, 0)
size = Vector3(36, 12, 36)
update_mode = 1
box_projection = true
intensity = 1.1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("12_0")

[node name="TimeBoard" type="Label3D" parent="."]
script = ExtResource("10_0")
translation = Vector3(0, 3.0, -12.0)
text = "Time: 10.0s"

[node name="Floor" type="StaticBody3D" parent="."]
collision_layer = 1
collision_mask = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
mesh = SubResource("4_0")
surface_material_override/0 = ExtResource("8_0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
shape = SubResource("5_0")
translation = Vector3(0, -5.0, 0)

[node name="Agent1" parent="." instance=ExtResource("1_0")]
collision_layer = 1
collision_mask = 1
translation = Vector3(-3, 1, -3)

[node name="Agent2" parent="." instance=ExtResource("1_0")]
collision_layer = 1
collision_mask = 1
translation = Vector3(3, 1, 3)

[node name="CameraRig" parent="." instance=ExtResource("2_0")]
translation = Vector3(0, 16, 12)

[node name="GameManager" type="Node" parent="."]
script = ExtResource("3_0")

[node name="Recorder" type="Node" parent="."]
script = ExtResource("12_1")
enabled = true
fps = 60

[node name="HUD" parent="." instance=ExtResource("7_0")]

[node name="WallN" type="StaticBody3D" parent="."]
collision_layer = 1
collision_mask = 1
translation = Vector3(0, 1, -15)

[node name="MeshN" type="MeshInstance3D" parent="WallN"]
mesh = SubResource("6_0")
scale = Vector3(30, 2, 0.4)
material_override = ExtResource("9_0")

[node name="CollisionN" type="CollisionShape3D" parent="WallN"]
shape = SubResource("9_0")

[node name="WallS" type="StaticBody3D" parent="."]
collision_layer = 1
collision_mask = 1
translation = Vector3(0, 1, 15)

[node name="MeshS" type="MeshInstance3D" parent="WallS"]
mesh = SubResource("6_0")
scale = Vector3(30, 2, 0.4)
material_override = ExtResource("9_0")

[node name="CollisionS" type="CollisionShape3D" parent="WallS"]
shape = SubResource("9_0")

[node name="WallE" type="StaticBody3D" parent="."]
collision_layer = 1
collision_mask = 1
translation = Vector3(15, 1, 0)

[node name="MeshE" type="MeshInstance3D" parent="WallE"]
mesh = SubResource("6_0")
scale = Vector3(0.4, 2, 30)
material_override = ExtResource("9_0")
rotation = Vector3(0, 1.5708, 0)

[node name="CollisionE" type="CollisionShape3D" parent="WallE"]
shape = SubResource("9_1")

[node name="WallW" type="StaticBody3D" parent="."]
collision_layer = 1
collision_mask = 1
translation = Vector3(-15, 1, 0)

[node name="MeshW" type="MeshInstance3D" parent="WallW"]
mesh = SubResource("6_0")
scale = Vector3(0.4, 2, 30)
material_override = ExtResource("9_0")
rotation = Vector3(0, 1.5708, 0)

[node name="CollisionW" type="CollisionShape3D" parent="WallW"]
shape = SubResource("9_1")
